// Vitest Snapshot v1

exports[`TodoItem > should match snapshot when checked 1`] = `
<div
  className="flex flex-row items-center justify-between"
>
  <p
    className="text-lg font-medium line-through text-gray-500"
  >
    Checked Todo Item
  </p>
  <div
    className="flex flex-row items-center"
  >
    <button
      className="text-xs text-red-700 border p-1 rounded"
      onClick={[Function]}
    >
      Delete
    </button>
    <button
      className="ml-2"
      onClick={[Function]}
    >
      <svg
        className="fill-green-600"
        height="24px"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`TodoItem > should match snapshot when unchecked 1`] = `
<div
  className="flex flex-row items-center justify-between"
>
  <p
    className="text-lg font-medium text-gray-800"
  >
    Unchecked Todo Item
  </p>
  <div
    className="flex flex-row items-center"
  >
    <button
      className="ml-2"
      onClick={[Function]}
    >
      <svg
        className="fill-blue-600"
        height="24px"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
    </button>
  </div>
</div>
`;
